--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    <!-- <h1>Hello World!</h1> -->
+    <h1>✌️ Hello World!</h1>
     <header className="absolute inset-0 h-8 bg-transparent"></header>
     <div id="root"></div>
     <script type="module" src="/src/renderer.ts"></script>
